<resources>
    <string name="app_name">Crazy Numbers</string>
    <string name="akaDylan">comic.otf</string>

    /* Start Activity*/
    <string name="play">Play</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="help">Help</string>

    /* Game Activity */
    <string name="level">Level</string>
    <string name="points">Points</string>

    /* Game Setting */
    <string name="sounds">Sounds</string>
    <string name="music">Music</string>
    <string name="settings">Settings</string>
    <string name="matrix">Matrix</string>
    <string name="difficulty">Difficulty</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="normal">Normal</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="temp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Donec et odio pellentesque diam volutpat commodo sed. Viverra aliquet eget sit amet. Duis at tellus at urna condimentum mattis pellentesque id nibh. Vitae et leo duis ut diam. Condimentum id venenatis a condimentum vitae sapien. Sit amet tellus cras adipiscing enim eu turpis egestas pretium. Lectus sit amet est placerat in egestas. Faucibus et molestie ac feugiat sed lectus vestibulum mattis. Accumsan tortor posuere ac ut consequat semper viverra. Etiam tempor orci eu lobortis elementum nibh tellus molestie. Orci dapibus ultrices in iaculis nunc sed augue lacus.
    \n\n\nCrazy Numbers\nApp Version: 1.0
    </string>

</resources>
