<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.app.dleelk4apps.crazynumbers.ui.start.StartActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_math"
        android:scaleType="centerCrop"  />

    <LinearLayout
        android:id="@+id/logoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsView"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="20dp">

        <com.app.dleelk4apps.crazynumbers.ui.views.GameCustomStartButtonView
            android:id="@+id/playGameCustomStartButtonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/play">

        </com.app.dleelk4apps.crazynumbers.ui.views.GameCustomStartButtonView>

        <com.app.dleelk4apps.crazynumbers.ui.views.GameCustomStartButtonView
            android:id="@+id/settingGameCustomStartButtonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/setting">

        </com.app.dleelk4apps.crazynumbers.ui.views.GameCustomStartButtonView>

        <com.app.dleelk4apps.crazynumbers.ui.views.GameCustomStartButtonView
            android:id="@+id/helpGameCustomStartButtonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/help">

        </com.app.dleelk4apps.crazynumbers.ui.views.GameCustomStartButtonView>

        <com.app.dleelk4apps.crazynumbers.ui.views.GameCustomStartButtonView
            android:id="@+id/aboutGameCustomStartButtonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/about">

        </com.app.dleelk4apps.crazynumbers.ui.views.GameCustomStartButtonView>
    </LinearLayout>

</RelativeLayout>
